chore: V1.0.0 Release - Final Polish & Renaming

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-        <string>Flappy Eagle</string>
+	<string>Just One Flap</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
